# TP_Cripto

./: CMakeLists.txt  Informe.docx  Makefile  README.md  decode.c  encode.c  encode.h  encrypt.c  header.c  header.h  main.c  stegobmp.c  test_encode_decode.c  utils.h
include/: decode.h  encode.h  encrypt.h  types.h
test/: secreto.txt
